exceptions done ig